lab1/Test/L1-A-10-49.output
Error Type A at Line 2
Error Type B at Line 37
Error Type A at Line 51
Error Type A at Line 74
Error Type A at Line 76
Error Type A at Line 96
